Fixing links and footer overlap bug

--- a/components/Footer.module.scss
+++ b/components/Footer.module.scss
@@ -5,6 +5,7 @@
 
   padding-bottom: 40px;
   margin-top: 30px;
+  margin-bottom: 60px;
 }
 
 .col {
